# FastAPI_Reddis_word_counter

./: README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py
app/internal/routes/: user.py
app/pkg/redds_tools/: tools.py
docker/api/: dockerfile
